Revert "fix: modals z-index 1 for menus on desktop, about button visible on mobile start"
This reverts commit bcac26897a69e1404617e55278941d6efb11c09c.

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -22,14 +22,7 @@ body.modal-open {
   .toolbar,
   .setting-bar {
     z-index: 1 !important;
-  }
-  
-  @media (max-width: 768px) {
-    .top-menu,
-    .toolbar,
-    .setting-bar {
-      pointer-events: none !important;
-    }
+    pointer-events: none !important;
   }
 }
 
